fix the homepage link in package.json

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "router",
-  "homepage": "https://abdelfattahelnaggar.github.io/Hey-React",
+  "homepage": "https://abdelfattahelnaggar.github.io/Hey-React/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
